fixed the middle alignment of the footer element in mobile view

--- a/stylesheets/defult.css.css
+++ b/stylesheets/defult.css.css
@@ -34,10 +34,10 @@
     margin-right:auto !important;
     background-color: #FFF;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";       /* IE 8 */
-    filter: alpha(opacity=70);  /* IE 5-7 */
-    -moz-opacity: 0.7;          /* Netscape */
-    -khtml-opacity: 0.7;        /* Safari 1.x */
-    opacity: 0.7;   
+    filter: alpha(opacity=85);  /* IE 5-7 */
+    -moz-opacity: 0.85;          /* Netscape */
+    -khtml-opacity: 0.85;        /* Safari 1.x */
+    opacity: 0.85;   
  }
 
  .transparent {
@@ -152,7 +152,7 @@
     margin-left:auto;
 }
 .footerContainer {
-    margin-top:1%;
+    margin:1% auto 0px auto;
 }
 .hmenubar1_list li a:hover {
     color: #DFF2FF;
@@ -315,7 +315,7 @@ h2.heading {
     font-size:12px;
     text-align:center;
     width:80%;
-    margin:0;
+    margin:0 auto;
 }
 .body {
 	margin:0;
